--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,8 @@
+body {
+  display: none !important;
+}
 
 .authoring-shell-root {
-  color: blue;
+  color: blue !important;
+  display: none !important;
 }
